# OpenCovibe

./: package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
messages/: en.json  zh-CN.json
scripts/: release.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/agent/: claude_protocol.rs  session_actor.rs  ssh.rs
src-tauri/src/commands/: picker_bridge.js  plugins.rs  preview.rs  session.rs
src-tauri/src/storage/: cli_sessions.rs  community_skills.rs  runs.rs  settings.rs
src/lib/: api.ts  types.ts
src/lib/components/: AgentEditor.svelte  AtMentionMenu.svelte  AuthSourceBadge.svelte  BatchProgressBar.svelte  CodeEditor.svelte  ContextHistoryPanel.svelte  ContextUsageGrid.svelte  ConversationItem.svelte  FilesPanel.svelte  HeatmapCalendar.svelte  HookManager.svelte  InlineToolCard.svelte  McpConfiguredPanel.svelte  McpDiscoverPanel.svelte  Modal.svelte  ProjectFolderItem.svelte  PromptInput.svelte  RewindModal.svelte  SessionInfoPanel.svelte  SessionStatusBar.svelte  SkillSelector.svelte  SlashMenu.svelte  StackedModelChart.svelte  ToolActivity.svelte  ToolBurstHeader.svelte  ToolDetailView.svelte
src/lib/stores/: session-store.svelte.ts  session-store.test.ts  types.ts
src/lib/stores/__fixtures__/: protocol-events.json
src/lib/utils/: agent-editor.ts  auto-name.ts  codemirror-languages.ts  format.ts  hook-helpers.ts  markdown.ts  platform-presets.ts  rewind.ts  sidebar-groups.test.ts  sidebar-groups.ts  slash-commands.ts  tool-colors.ts  tool-rendering.ts
src/lib/utils/__tests__/: auto-name.test.ts  codemirror-languages.test.ts  rewind.test.ts  slash-commands.test.ts  tool-rendering.test.ts
src/routes/: +layout.svelte
src/routes/chat/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/teams/: +page.svelte
src/routes/usage/: +page.svelte
